# raytracer

./: .gitignore  AABB.h  BVHNode.h  CMakeLists.txt  Camera.h  Dielectric.h  FileParser.h  Hittable.h  HittableList.h  Lambertian.h  Material.h  Mesh.h  Metal.h  README.md  Ray.h  Sphere.h  Texture.h  Triangle.h  Vector3.h  color.h  image.h  main.cc  run-gpu.sh  run.sh  util.h  world.h
hittable/: Box.h  ConstantMedium.h  FlipNormals.h  Mesh.h  Rect.h  Rotate.h  Translate.h
material/: DiffuseLight.h  Isotropic.h  Material.h  Metal.h
src/: AABB.h  BVHNode.h  Camera.h  FileParser.h  Texture.h  Vector3.h  image.h  main.cc  world.h
src/gpu/: AABB.cuh  Camera.cuh  Ray.cuh  Texture.cuh  Vector3.cuh  main.cu  testCUDA.cu  util.cuh  world.cuh
src/gpu/hittable/: Box.cuh  ConstantMedium.cuh  Hittable.cuh  HittableList.cuh  Rect.cuh  Sphere.cuh
src/gpu/material/: Dielectric.cuh  DiffuseLight.cuh  Isotropic.cuh  Lambertian.cuh  Material.cuh  Metal.cuh
src/hittable/: Box.h  ConstantMedium.h  FlipNormals.h  Hittable.h  HittableList.h  MovingSphere.h  Rect.h  Rotate.h  Sphere.h  Translate.h  Triangle.h
src/material/: Dielectric.h  DiffuseLight.h  Isotropic.h  Lambertian.h  Metal.h
